samples/_failures_safe/1761216455_5e3dd1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ecb86826.c: In function ‘main’:
./samples/SAFE/__tmp_ecb86826.c:174:5: error: expected expression at end of input
  174 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_ecb86826.c:174:5: error: expected declaration or statement at end of input
